kubernetes/home/default/test-whoami/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: default
spec:
  selector:
    app: whoami
  ports:
    - name: web
      port: 80
      targetPort: web
