kubernetes/home/default/test-whoami/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: whoami
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.whoami.local.opryga.com`)
      kind: Rule
      services:
        - name: whoami
          port: 80
    - match: Host(`whoami.local.opryga.com`)
      kind: Rule
      services:
        - name: whoami
          port: 80
      middlewares:
        - name: default-headers
  tls:
    secretName: local-opryga-com-tls
